# game_of_life

./: CMakeLists.txt  README.md  main.cpp  run
src/graphics/: buttons.cpp  buttons.hpp  event_handler.cpp  grid.cpp  grid.hpp  main_menu.cpp  user_interface.cpp  user_interface.hpp
src/logic/game_of_life/: game_construct.cpp  game_construct.hpp
src/logic/game_of_life/data_presentation/: CMakeLists.txt  cell.cpp  cell.hpp  game_template.hpp  rule.cpp  set_cells.hpp
src/logic/game_of_life/executor/: CMakeLists.txt  single_threaded_executor.hpp
src/logic/game_of_life/executor/calculator/: np_calculator.cpp  p_calculator.cpp  p_calculator.hpp
src/logic/game_of_life/executor/todo/: cache.cpp
src/logic/game_of_life/templates/: parser.hpp
